--- a/header.html
+++ b/header.html
@@ -1,8 +1,9 @@
 <header>
     <nav class="navbar">
         <a class="navbar" href="registration.html"> REGISTRATION</a>
+        <a class="navbar" href="index.html">APPLY</a>
         <a class="navbar" href="listapplication.html"> MODIFY</a>
-        <a class="navbar" href="requiredproof.html"> REQUIRED PROOF</a>
+        <a class="navbar" href="requestchange.html"> REQUESTCHANGE</a>
         <a class="navbar" href="viewlist.html"> LIST OF APPLICATION</a>
         <a class="navbar" href="logoutpage.html">LOGOUT</a>
     </nav>
