--- a/listapplication.html
+++ b/listapplication.html
@@ -6,7 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LISTAPPLICATION</title>
+    <header id="header"></header>
+      <script src="jquery.min.js"></script>
+      <script>
+            $("#header").load("header.html")
+      </script>
     <style>
+        .navbar{
+            background-color: brown;
+           color: whitesmoke;
+            text-align: center;
+            padding:40px;
+            text-decoration: none;
+        }
         h3{
             text-align: center;
             padding: 2%;
@@ -19,11 +31,22 @@
             padding: 0.5%;
             text-align: center;
             box-shadow: 5px;
-            margin-left: 20%;
-            color:darkred;
+            margin-left: 10%;
+            color:lightcoral;
+        }
+        .searchBar {
+            background-color: #f1f1c1;
+            margin: auto;
+            margin-top: 40px;
+            width: 80%;
+            border: 5px solid #73AD21;
+            padding: 10px;
+        }
+        th{
+            padding: 8px;
         }
         table {
-            margin-left: 5%;
+            margin-left: 0.5%;
             margin-top: 3%;
             border-radius: 1px solid;
             border: 1px;
@@ -40,6 +63,7 @@
         integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
         </script>
+        <div class="searchBar">
     <script src="listapplication.js"></script>
     <h3>LIST OF APPLICATION</h3>
     <input type="text " id="searchBox" class="searchBox" placeholder="Search For Name" onkeyup="searchName()" autocomplete="off">
@@ -59,6 +83,7 @@
         </thead>
         <tbody id="applicationTable"></tbody>
     </table>
+</div>
 </body>
 
 </html>
