--- a/requestchange.html
+++ b/requestchange.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>REQUIRED PROOF</title>
-    <link rel="stylesheet" href="requiredproof.css">
+    <title>REQUESTCHANGE</title>
+    <link rel="stylesheet" href="requestchange.css">
 </head>
  <body>  
-    <div class="usernametopview">
-        <label>USERNAME :</label>
-        <label id="userNameView"></label>
-  </div>
+  <header id="header"></header>
+      <script src="jquery.min.js"></script>
+      <script>
+            $("#header").load("header.html")
+      </script>
         <div class="overall">
             <h2>DOCUMENTS REQUIRED - INDIA</h2>
         <div class="container">
