--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 
       <img src="asset/image/PANCardLogo.png" alt="pancard">
       <br>
-      <img class="change" src="asset/image/glass.png" alt="pancard1">
       <h1>ONLINE APPLY PAN CARD</h1>
 
       <header id="header"></header>
@@ -25,13 +24,13 @@
             $("#header").load("header.html")
       </script>
 
-      <div class="hi1">
+      <div class="total">
             <marquee> On account of COVID-19 pandemic and subsequent Govt. advisories there will be delays in processing
                   of PAN applications.</marquee>
       </div>
       <div class="usernametopview">
-            <label>USERNAME :</label>
-            <label id="userNameView"></label>
+         <strong>   <label>USERNAME :</label>
+            <label id="userNameView"></label></strong>
       </div>
       <div class="overall">
             <div class="personal">
@@ -60,13 +59,13 @@
                               <label> <strong> Father Name </strong> </label><br>
                               <span class="fatherfirstname">
                                     <input type="text" id="fathername" pattern="[A-Za-z]{3,15}"
-                                          placeholder="Father First name" name="father first name">
+                                          placeholder="FatherName" name="father first name">
                               </span>
                               <br>
                               <label> <strong> Mother Name </strong> </label><br>
                               <span class="motherfirstname">
                                     <input type="text" id="mathername" pattern="[A-Za-z]{3,15}"
-                                          placeholder="mother First name" name="mother_first_name">
+                                          placeholder="MotherName" name="Mother_Name">
                               </span>
                               <br>
                               <label> <strong> Mobile No </strong> </label><br>
