--- a/editpage.html
+++ b/editpage.html
@@ -6,38 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MODIFYDETAILS</title>
-    <style>
-        .submitbutton {
-            opacity: 0.5;
-        }
-
-        .submitbutton:hover {
-            opacity: 1.0;
-        }
-
-        table {
-            width: 850px;
-            height: 580px;
-            margin: auto;
-            padding: 20px 20px 20px 20px;
-            border-radius: 20px;
-            border-style: solid;
-        }
-
-        .submitbutton {
-            margin-top: 1%;
-            margin-bottom: 2%;
-            text-align: center;
-        }
-
-        .editpage {
-            box-shadow: 1px;
-            margin-left: 5%;
-            margin-top: 2%;
-            border-radius: 1px solid;
-            border: 1px;
-        }
-    </style>
+    <link rel="stylesheet" href="editpage.css">
 </head>
 
 <body>
