--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                   </div>
                   <div class="applicant">
                         <form onsubmit="pan()">
-                              <label> <strong> Applicacnt Name </strong> </label><br>
+                              <label> <strong> Applicacnt Name *</strong> </label><br>
                               <span class="firstname">
                                     <input type="text" id="applicantnames" placeholder="First_name"
                                           pattern="[A-Za-z]{3,15}" name="first_name">
@@ -56,7 +56,7 @@
                                           name="last name">
                               </span>
                               <br>
-                              <label> <strong> Father Name </strong> </label><br>
+                              <label> <strong> Father Name * </strong> </label><br>
                               <span class="fatherfirstname">
                                     <input type="text" id="fathername" pattern="[A-Za-z]{3,15}"
                                           placeholder="FatherName" name="father first name">
@@ -68,7 +68,7 @@
                                           placeholder="MotherName" name="Mother_Name">
                               </span>
                               <br>
-                              <label> <strong> Mobile No </strong> </label><br>
+                              <label> <strong> Mobile No * </strong> </label><br>
                               <input type="tel" name="Mobile number" id="mobilenumber" pattern="[6789][0-9]{9}"
                                     placeholder="Mobile number">
                               <br>
@@ -77,7 +77,7 @@
                                     pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
                               <br>
 
-                              <label> <strong>Date Of Birth</strong> </label><br>
+                              <label> <strong>Date Of Birth *</strong> </label><br>
                               <input type="date" name="date of birth" id="dob"
                                     pattern="(0[1-9]|1[0-9]|2[0-9]|3[01]).(0[1-9]|1[012]).[0-9]{4}"
                                     placeholder="date of birth"> <br>
@@ -85,24 +85,24 @@
                               <input type="tel" name="number" id="aadharnumber" pattern="[0-9]{12}"
                                     placeholder="Aadhar Number"><br>
 
-                              <label> <strong> No./ Building / Village </strong> </label><br>
+                              <label> <strong> No./ Building / Village *</strong> </label><br>
                               <input class="no" id="no" type="text" placeholder="No./ Building / Village">
                               <br>
-                              <label> <strong> Area/ Road/ P.O. </strong> </label><br>
+                              <label> <strong> Area/ Road/ P.O. *</strong> </label><br>
                               <input class="area" id="area" type="text" name="Area" placeholder="Area/ Road/ P.O.">
                               <br>
-                              <label> <strong> City/ Town/ District</strong> </label><br>
+                              <label> <strong> City/ Town/ District *</strong> </label><br>
                               <input class="city" id="city" type="text" name=" City"
                                     placeholder=" City/ Town/ District">
                               <br>
-                              <label> <strong> State </strong> </label><br>
+                              <label> <strong> State *</strong> </label><br>
                               <input class="state" id="state" type="text" name="State" placeholder="state">
                               <br>
-                              <label> <strong> Pin Code </strong> </label><br>
+                              <label> <strong> Pin Code *</strong> </label><br>
                               <input class="pin" id="pin" type="text" name="Pin Code" placeholder="Pin Code">
                               <br>
 
-                              <label> <strong> Gender </strong> </label>
+                              <label> <strong> Gender *</strong> </label>
                               <br>
                               <select id="gender" name="gender">
                                     <option value="">Please Select</option>
