--- a/requestchange.html
+++ b/requestchange.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,40 +8,59 @@
     <title>REQUESTCHANGE</title>
     <link rel="stylesheet" href="requestchange.css">
 </head>
- <body>  
-  <header id="header"></header>
-      <script src="jquery.min.js"></script>
-      <script>
-            $("#header").load("header.html")
-      </script>
-        <div class="overall">
-            <h2>DOCUMENTS REQUIRED - INDIA</h2>
+
+<body>
+    <header id="header"></header>
+    <script src="jquery.min.js"></script>
+    <script>
+        $("#header").load("header.html")
+    </script>
+    <div class="overall">
+        <h2>REQUEST TO CHANGE</h2>
         <div class="container">
-        <h3>Proof Of Identity</h3>
-        <ul>
-            <li>AADHAAR Card issued by UIDAI (In Copy)</li>
-            <li>Driving License (In Copy)</li>
-            <li>Bank certificate in original on letter head of the branch (along with name & stamp of issuing officer) containing duly attested photograph and bank A/c no of the Applicant.<strong> Click here to Download the Format </strong> </li>
-            <li>Passport (In Copy)</li>
-            <li>Photo ID card issued by Central Govt or State Govt or a Public Sector Undertaking (In Copy)</li>
-            <li>Ration Card having photograph of the applicant. (In Copy)</li>
-            <li>Voters ID card (In Copy)</li>
-        </ul>
-        <h3>Proof of Address</h3>
-        <ul>
-            <li>Post office pass book having address of applicant (In Copy)</li>
-            <li>Voters ID card (In Copy)</li>
-            <li>Bank Account Statement not more than 3 months old (In Copy)</li>
-            <li>AADHAAR Card issued by UIDAI (In Copy)</li>
-            <li>Employer certificate in ORIGINAL . <strong> here to Download the Format </strong> </li>
-        </ul>
-        <h3>NOTE :</h3>
-        <P> 1.Proofs having initials in Name and not having applicant's Complete Name are not acceptable except Voter ID Card. Driving license is acceptable only when short form is there in Middle Name.
-        </P>
-          <P>2.Representative Assessee (RA) of Minor is mandatory and should be Father/Mother only. RA is required to sign on all places on the form wherever applicable for Minors and Others filing the RA.
-        </P> 
-          <P> 3. Applicants who want the Delivery of PAN Card at Office Address, Should send Employee Certificate in Original as per the format attached above.</P>
+            <label> <strong> PANCARD HOLDER NAME *</strong> </label>
+            <input type="text" id="applicantname" placeholder="Pan_Card_Name" pattern="[A-Za-z]{3,15}" name="Name" required>
+            <br>
+            <br>
+            <label> <strong> PANCARD ID NUMBER *</strong> </label>
+            <input type="text" id="applicantIdNumber" placeholder="Pan_Card_Number" pattern="[A-Za-z]{3,15}" name="idNumber" required>
+            <br>
+            <br>
+            <label> <strong> AADHAR NUMBER *</strong> </label>
+            <input type="text" id="aadharNumber" placeholder="Aadhar_Number" pattern="[0-9]{12}" name="aadharNumber" required>
+            <br>
+            <br>
+            <label><strong>MOBILE NUMBER </strong> </label>
+            <br>
+            <br>
+            <label>OLD MOBILE NUMBER </label>
+            <span class="mobileNumber">
+                <input type="tel" id="mobileNumber" placeholder="OldNumber" pattern="[6789][0-9]{9}" name="OldNumber">
+            </span>
+            <label>CHANGE MOBILE NUMBER</label>
+            <span calss="changeNumber">
+                <input type="tel" id="changeNumber" placeholder="ChangeNumber" pattern="[6789][0-9]{9}"
+                    name="ChangeNumber">
+            </span>
+            <br>
+            <br>
+            <label> <strong> ADDRESS</strong> </label><br>
+            <br>
+            <label>OLD ADDRESS</label>
+            <span class="mobileNumber">
+                <input type="tel" id="oldAddress" placeholder="OldAddress"  name="OldAddress" >
+            </span>
+            <label>CHANGE ADDRESS</label>
+            <span calss="changeNumber">
+                <input type="tel" id="changeAddress" placeholder="ChangeAddress" 
+                    name="ChangeAddress">
+            </span>
+            <br>
+            <br>
+            <button type="button"> CHANGE </button>
+
+        </div>
     </div>
-</div>
-    </body>
+</body>
+
 </html>
