--- a/listapplication.html
+++ b/listapplication.html
@@ -25,21 +25,21 @@
         </script>
     <div class="searchBar">
         <script src="listapplication.js"></script>
-        <h3>LIST OF APPLICATION</h3>
+        <h2>LIST OF APPLICATION</h2>
         <input type="text " id="searchBox" class="searchBox" placeholder="Search For Name" onkeyup="searchName()"
             autocomplete="off">
         <table border="1" id="myTable">
             <caption></caption>
             <thead>
                 <tr>
-                    <th scope="col" id="serialnumber">ID</th>
-                    <th scope="col" id="name">NAME</th>
-                    <th scope="col" id="mobilenumber">MOBILENUMBER</th>
-                    <th scope="col" id="emailid">EMAILID</th>
-                    <th scope="col" id="adharnumber">AADHARNUMBER</th>
-                    <th scope="col" id="gender">GENDER</th>
-                    <th scope="col" id="gender">STATE</th>
-                    <th scope="col">ACTION</th>
+                    <th scope="col" id="serialnumber">Id</th>
+                    <th scope="col" id="name">Name</th>
+                    <th scope="col" id="mobilenumber">Mobilenumber</th>
+                    <th scope="col" id="emailid">Emailid</th>
+                    <th scope="col" id="adharnumber">Aadharnumber</th>
+                    <th scope="col" id="gender">Gender</th>
+                    <th scope="col" id="gender">State</th>
+                    <th scope="col">Action</th>
                 </tr>
             </thead>
             <tbody id="applicationTable"></tbody>
