--- a/requestchange.html
+++ b/requestchange.html
@@ -47,11 +47,11 @@
             <label> <strong> ADDRESS</strong> </label><br>
             <br>
             <label>OLD ADDRESS</label>
-            <span class="mobileNumber">
+            <span class="oldAddress">
                 <input type="tel" id="oldAddress" placeholder="OldAddress"  name="OldAddress" >
             </span>
             <label>CHANGE ADDRESS</label>
-            <span calss="changeNumber">
+            <span calss="changeAddress">
                 <input type="tel" id="changeAddress" placeholder="ChangeAddress" 
                     name="ChangeAddress">
             </span>
