--- a/viewlist.html
+++ b/viewlist.html
@@ -15,9 +15,8 @@
 </head>
 
 <body>
-
+    <h2><strong>VIEW APPLICATION </strong></h1>
     <div class="searchBar">
-        <h1><strong>VIEW APPLICATION </strong></h1>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.10.6/dayjs.min.js"
             integrity="sha512-bwD3VD/j6ypSSnyjuaURidZksoVx3L1RPvTkleC48SbHCZsemT3VKMD39KknPnH728LLXVMTisESIBOAb5/W0Q=="
             crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -31,12 +30,12 @@
             <caption></caption>
             <thead>
                 <tr>
-                    <th scope="col" id="serialnumber">ID</th>
-                    <th scope="col" id="name">NAME</th>
-                    <th scope="col" id="mobilenumber">MOBILENUMBER</th>
-                    <th scope="col" id="emailid">EMAILID</th>
-                    <th scope="col" id="adharnumber">AADHARNUMBER</th>
-                    <th scope="col" id="gender">GENDER</th>
+                    <th scope="row" id="serialnumber">Id</th>
+                    <th scope="row" id="name">Name</th>
+                    <th scope="row" id="mobilenumber">Mobilenumber</th>
+                    <th scope="row" id="emailid">Emailid</th>
+                    <th scope="row" id="adharnumber">Aadharnumber</th>
+                    <th scope="row" id="gender">Gender</th>
                 </tr>
             </thead>
             <tbody id="applicationTable"></tbody>
