--- a/loginpage.html
+++ b/loginpage.html
@@ -22,13 +22,16 @@
   <div class="overall">
     <form onsubmit="loginpage()">
       <div class="imgcontainer">
-        <img src="image1.png" alt="Avatar" class="avatar">
       </div>
       <div class="container">
-        <label for="uname"><strong>Username</strong></label>
+        <div class="userbox">
+        <label for="username"><strong>Username</strong></label>
         <input type="text" id="username" placeholder="Enter Username" name="uname">
-        <label for="psw"><strong>Password</strong></label>
+      </div>
+      <div class="passwordbox">
+        <label for="password"><strong>Password</strong></label>
         <input type="password" minlength="6" id="password" placeholder="Enter Password">
+      </div>
         <button type="submit">Login</button>
       </div>
     </form>
