--- a/index.html
+++ b/index.html
@@ -38,22 +38,14 @@
                         <p> <strong> NEW PAN INDIA </strong> </p>
                   </div>
                   <div class="h2">
-                        <h2> <strong>1.PERSONAL INFORMATION </strong> </h2>
+                        <h2> <strong>PERSONAL INFORMATION </strong> </h2>
                   </div>
                   <div class="applicant">
                         <form onsubmit="pan()">
                               <label> <strong> Applicacnt Name *</strong> </label><br>
                               <span class="firstname">
-                                    <input type="text" id="applicantnames" placeholder="First_name"
+                                    <input type="text" id="applicantnames" placeholder="First_Name"
                                           pattern="[A-Za-z]{3,15}" name="first_name">
-                              </span>
-                              <span calss="middlename">
-                                    <input type="text" id="middle" placeholder="middle name" pattern="[A-Za-z]{3,15}"
-                                          name="middle name">
-                              </span>
-                              <span class="lastname">
-                                    <input type="text" id="last" placeholder="last name" pattern="[A-Za-z]{3,15}"
-                                          name="last name">
                               </span>
                               <br>
                               <label> <strong> Father Name * </strong> </label><br>
@@ -69,8 +61,8 @@
                               </span>
                               <br>
                               <label> <strong> Mobile No * </strong> </label><br>
-                              <input type="tel" name="Mobile number" id="mobilenumber" pattern="[6789][0-9]{9}"
-                                    placeholder="Mobile number">
+                              <input type="tel" name="Mobile Number" id="mobilenumber" pattern="[6789][0-9]{9}"
+                                    placeholder="Mobile Number">
                               <br>
                               <label> <strong> Email ID </strong> </label><br>
                               <input type="email" name="email" id="Email" placeholder="Email"
@@ -96,7 +88,7 @@
                                     placeholder=" City/ Town/ District">
                               <br>
                               <label> <strong> State *</strong> </label><br>
-                              <input class="state" id="state" type="text" name="State" placeholder="state">
+                              <input class="state" id="state" type="text" name="State" placeholder="State">
                               <br>
                               <label> <strong> Pin Code *</strong> </label><br>
                               <input class="pin" id="pin" type="text" name="Pin Code" placeholder="Pin Code">
@@ -111,7 +103,7 @@
                                     <option value="Transgender">Transgender</option>
                               </select> <br>
                               <br>
-                              <input class="submit" type="submit" value="submit">
+                              <button class="submit">Submit</button>
                         </form>
                         <br>
                         <br>
