--- a/listapplication.html
+++ b/listapplication.html
@@ -28,7 +28,7 @@
         <h2>LIST OF APPLICATION</h2>
         <input type="text " id="searchBox" class="searchBox" placeholder="Search For Name" onkeyup="searchName()"
             autocomplete="off">
-        <table border="1" id="myTable">
+        <table id="myTable">
             <caption></caption>
             <thead>
                 <tr>
