--- a/registration.html
+++ b/registration.html
@@ -26,7 +26,7 @@
     <div class="overall">
         <form onsubmit="registration()">
             <label> <strong> Yourname *</strong> </label>
-            <input type="text" id="yourname" placeholder="your name" autocomplete="off" required> <br>
+            <input type="text" id="yourname" placeholder="Your Name" autocomplete="off" required> <br>
             <label> <strong> Date of birth </strong> </label>
             <input type="date" id="datebirth" placeholder="DateOfBirth">
 
@@ -37,7 +37,7 @@
             <input type="tel" id="mobileNo" pattern="[0-9]{10}" placeholder="MobileNumber" required>
            
             <label> <strong>Username</strong> </label>
-            <input type="text" id="username" placeholder="userName" required>
+            <input type="text" id="username" placeholder="UserName" required>
            
             <label> <strong>Createpassword</strong> </label>
             <input type="password" id="password" name="password" placeholder="Password" required>
