--- a/viewlist.html
+++ b/viewlist.html
@@ -26,7 +26,7 @@
             crossorigin="anonymous" referrerpolicy="no-referrer">
             </script>
         <script src="viewlist.js"></script>
-        <table border="5" id="table">
+        <table id="table">
             <caption></caption>
             <thead>
                 <tr>
