--- a/header.html
+++ b/header.html
@@ -1,10 +1,11 @@
 <header>
     <nav class="navbar">
-        <a class="navbar" href="registration.html"> REGISTRATION</a>
-        <a class="navbar" href="index.html">APPLY</a>
-        <a class="navbar" href="listapplication.html"> MODIFY</a>
-        <a class="navbar" href="requestchange.html"> REQUESTCHANGE</a>
-        <a class="navbar" href="viewlist.html"> LIST OF APPLICATION</a>
-        <a class="navbar" href="logoutpage.html">LOGOUT</a>
+        <ul>
+        <a class="navbar" href="registration.html"> <li> REGISTRATION </li></a>
+        <a class="navbar" href="index.html"><li> APPLY </li></a>
+        <a class="navbar" href="listapplication.html"><li> MODIFY </li></a>
+        <a class="navbar" href="requestchange.html"><li> REQUESTCHANGE </li></a>
+        <a class="navbar" href="viewlist.html"><li> LIST OF APPLICATION </li></a>
+    </ul>
     </nav>
 </header>
