--- a/editpage.html
+++ b/editpage.html
@@ -95,9 +95,12 @@
                 </td>
             </tr>
         </table>
-        <div class="submitbutton"> <input type="submit" onclick="modifyInformation(id)" value="DONE">
-            <button onclick="window.print()">Print this page</button>
+        <div class="donebutton">
+            <button type="submit" onclick="modifyInformation(id)" value=""> DONE </button>
         </div>
+        <div class="printbutton">
+        <button onclick="window.print()">Print this page</button>
+    </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.10.6/dayjs.min.js"
     integrity="sha512-bwD3VD/j6ypSSnyjuaURidZksoVx3L1RPvTkleC48SbHCZsemT3VKMD39KknPnH728LLXVMTisESIBOAb5/W0Q=="
