--- a/requestchange.html
+++ b/requestchange.html
@@ -18,46 +18,46 @@
     <div class="overall">
         <h2>REQUEST TO CHANGE</h2>
         <div class="container">
-            <label> <strong> PANCARD HOLDER NAME *</strong> </label>
+            <label> <strong> Pancard Holder Name *</strong> </label>
             <input type="text" id="applicantname" placeholder="Pan_Card_Name" pattern="[A-Za-z]{3,15}" name="Name" required>
             <br>
             <br>
-            <label> <strong> PANCARD ID NUMBER *</strong> </label>
+            <label> <strong> Pancard Id Number *</strong> </label>
             <input type="text" id="applicantIdNumber" placeholder="Pan_Card_Number" pattern="[A-Za-z]{3,15}" name="idNumber" required>
             <br>
             <br>
-            <label> <strong> AADHAR NUMBER *</strong> </label>
+            <label> <strong> Aadhar Number *</strong> </label>
             <input type="text" id="aadharNumber" placeholder="Aadhar_Number" pattern="[0-9]{12}" name="aadharNumber" required>
             <br>
             <br>
-            <label><strong>MOBILE NUMBER </strong> </label>
+            <label><strong>Mobile Number </strong> </label>
             <br>
             <br>
-            <label>OLD MOBILE NUMBER </label>
+            <label>Old Mobile Number </label>
             <span class="mobileNumber">
                 <input type="tel" id="mobileNumber" placeholder="OldNumber" pattern="[6789][0-9]{9}" name="OldNumber">
             </span>
-            <label>CHANGE MOBILE NUMBER</label>
+            <label>Change Mobile Number</label>
             <span calss="changeNumber">
                 <input type="tel" id="changeNumber" placeholder="ChangeNumber" pattern="[6789][0-9]{9}"
                     name="ChangeNumber">
             </span>
             <br>
             <br>
-            <label> <strong> ADDRESS</strong> </label><br>
+            <label> <strong> Address</strong> </label><br>
             <br>
-            <label>OLD ADDRESS</label>
+            <label>Old Address</label>
             <span class="oldAddress">
                 <input type="tel" id="oldAddress" placeholder="OldAddress"  name="OldAddress" >
             </span>
-            <label>CHANGE ADDRESS</label>
+            <label>Change Address</label>
             <span calss="changeAddress">
                 <input type="tel" id="changeAddress" placeholder="ChangeAddress" 
                     name="ChangeAddress">
             </span>
             <br>
             <br>
-            <button type="button"> CHANGE </button>
+            <button type="button"> SUBMIT </button>
 
         </div>
     </div>
