--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <link rel="stylesheet" href="index.css">
 
       <img src="asset/image/PANCardLogo.png" alt="pancard">
-      <label>  <a  class="logout" href="logoutpage.html">LOGOUT</a></label>
+      <div class="logout"><button> <a   href="logoutpage.html">LOGOUT</a></button> </div>
       <br>
       <header id="header"></header>
       <script src="jquery.min.js"></script>
@@ -23,13 +23,6 @@
             $("#header").load("header.html")
       </script>
       <h1>ONLINE APPLY PAN CARD</h1>
-
-      
-
-      <div class="total">
-            <marquee> On account of COVID-19 pandemic and subsequent Govt. advisories there will be delays in processing
-                  of PAN applications.</marquee>
-      </div>
       <div class="usernametopview">
          <strong>   <label>USERNAME :</label>
             <label id="userNameView"></label></strong>
