--- a/viewlist.html
+++ b/viewlist.html
@@ -17,7 +17,7 @@
 
 <body>
     <h2><strong>VIEW APPLICATION </strong></h1>
-    <div class="searchBar">
+    <div class="viewBar">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.10.6/dayjs.min.js"
             integrity="sha512-bwD3VD/j6ypSSnyjuaURidZksoVx3L1RPvTkleC48SbHCZsemT3VKMD39KknPnH728LLXVMTisESIBOAb5/W0Q=="
             crossorigin="anonymous" referrerpolicy="no-referrer"></script>
