--- a/requestchange.html
+++ b/requestchange.html
@@ -20,15 +20,18 @@
         <h2>REQUEST TO CHANGE</h2>
         <div class="container">
             <label> <strong> Pancard Holder Name *</strong> </label>
-            <input type="text" id="applicantname" placeholder="Pan_Card_Name" pattern="[A-Za-z]{3,15}" name="Name" required>
+            <input type="text" id="applicantname" placeholder="Pan_Card_Name" pattern="[A-Za-z]{3,15}" name="Name"
+                required>
             <br>
             <br>
             <label> <strong> Pancard Id Number *</strong> </label>
-            <input type="text" id="applicantIdNumber" placeholder="Pan_Card_Number" pattern="[A-Za-z]{3,15}" name="idNumber" required>
+            <input type="text" id="applicantIdNumber" placeholder="Pan_Card_Number" pattern="[A-Za-z]{3,15}"
+                name="idNumber" required>
             <br>
             <br>
             <label> <strong> Aadhar Number *</strong> </label>
-            <input type="text" id="aadharNumber" placeholder="Aadhar_Number" pattern="[0-9]{12}" name="aadharNumber" required>
+            <input type="text" id="aadharNumber" placeholder="Aadhar_Number" pattern="[0-9]{12}" name="aadharNumber"
+                required>
             <br>
             <br>
             <label><strong>Mobile Number </strong> </label>
@@ -49,12 +52,11 @@
             <br>
             <label>Old Address</label>
             <span class="oldAddress">
-                <input type="tel" id="oldAddress" placeholder="OldAddress"  name="OldAddress" >
+                <input type="tel" id="oldAddress" placeholder="OldAddress" name="OldAddress">
             </span>
             <label>Change Address</label>
             <span calss="changeAddress">
-                <input type="tel" id="changeAddress" placeholder="ChangeAddress" 
-                    name="ChangeAddress">
+                <input type="tel" id="changeAddress" placeholder="ChangeAddress" name="ChangeAddress">
             </span>
             <br>
             <br>
