--- a/requestchange.html
+++ b/requestchange.html
@@ -10,6 +10,11 @@
 </head>
 
 <body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"
+        integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer">
+        </script>
+    <script src="requestchange.js"></script>
     <img src="asset/image/PANCardLogo.png" alt="pancard">
     <header id="header"></header>
     <script src="jquery.min.js"></script>
@@ -19,49 +24,50 @@
     <div class="overall">
         <h2>REQUEST TO CHANGE</h2>
         <div class="container">
-            <label> <strong> Pancard Holder Name *</strong> </label>
-            <input type="text" id="applicantname" placeholder="Pan_Card_Name" pattern="[A-Za-z]{3,15}" name="Name"
-                required>
-            <br>
-            <br>
-            <label> <strong> Pancard Id Number *</strong> </label>
-            <input type="text" id="applicantIdNumber" placeholder="Pan_Card_Number" pattern="[A-Za-z]{3,15}"
-                name="idNumber" required>
-            <br>
-            <br>
-            <label> <strong> Aadhar Number *</strong> </label>
-            <input type="text" id="aadharNumber" placeholder="Aadhar_Number" pattern="[0-9]{12}" name="aadharNumber"
-                required>
-            <br>
-            <br>
-            <label><strong>Mobile Number </strong> </label>
-            <br>
-            <br>
-            <label>Old Mobile Number </label>
-            <span class="mobileNumber">
-                <input type="tel" id="mobileNumber" placeholder="OldNumber" pattern="[6789][0-9]{9}" name="OldNumber">
-            </span>
-            <label>Change Mobile Number</label>
-            <span calss="changeNumber">
-                <input type="tel" id="changeNumber" placeholder="ChangeNumber" pattern="[6789][0-9]{9}"
-                    name="ChangeNumber">
-            </span>
-            <br>
-            <br>
-            <label> <strong> Address</strong> </label><br>
-            <br>
-            <label>Old Address</label>
-            <span class="oldAddress">
-                <input type="tel" id="oldAddress" placeholder="OldAddress" name="OldAddress">
-            </span>
-            <label>Change Address</label>
-            <span calss="changeAddress">
-                <input type="tel" id="changeAddress" placeholder="ChangeAddress" name="ChangeAddress">
-            </span>
-            <br>
-            <br>
-            <button type="button"> SUBMIT </button>
-
+            <form onsubmit=" requestChange()">
+                <label> <strong> Pancard Holder Name *</strong> </label>
+                <input type="text" id="applicantname" placeholder="Pan_Card_Name" pattern="[A-Za-z]{3,15}" name="Name"
+                    required>
+                <br>
+                <br>
+                <label> <strong> Pancard Id Number *</strong> </label>
+                <input type="text" id="applicantIdNumber" placeholder="Pan_Card_Number" name="idNumber" required>
+                <br>
+                <br>
+                <label> <strong> Aadhar Number *</strong> </label>
+                <input type="text" id="aadharNumber" placeholder="Aadhar_Number" minlength="12" maxlength="12"
+                    pattern="[0-9]{12}" name="aadharNumber" required>
+                <br>
+                <br>
+                <label><strong>Mobile Number </strong> </label>
+                <br>
+                <br>
+                <label>Old Mobile Number </label>
+                <span class="mobileNumber">
+                    <input type="tel" id="mobileNumber" placeholder="OldNumber" pattern="[6789][0-9]{9}"
+                        name="OldNumber" required>
+                </span>
+                <label>Change Mobile Number</label>
+                <span calss="changeNumber">
+                    <input type="tel" id="changeNumber" placeholder="ChangeNumber" pattern="[6789][0-9]{9}"
+                        name="ChangeNumber" required>
+                </span>
+                <br>
+                <br>
+                <label> <strong> Address</strong> </label><br>
+                <br>
+                <label>Old Address</label>
+                <span class="oldAddress">
+                    <input type="text" id="oldAddress" placeholder="OldAddress" name="OldAddress" required>
+                </span>
+                <label>Change Address</label>
+                <span class="changeAddress">
+                    <input type="text" id="changeAddress" placeholder="ChangeAddress" name="ChangeAddress" required>
+                </span>
+                <br>
+                <br>
+                <button type="submit"> SUBMIT </button>
+            </form>
         </div>
     </div>
 </body>
