--- a/requestapplication.html
+++ b/requestapplication.html
@@ -10,6 +10,12 @@
 </head>
 
 <body>
+    <img src="asset/image/PANCardLogo.png" alt="pancard">
+    <header id="header"></header>
+    <script src="jquery.min.js"></script>
+    <script>
+        $("#header").load("header.html")
+    </script>
     <h2><strong>REQUEST APPLICATION </strong></h1>
     <div class="viewBar">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"
